Add API support for multiple aggregators
Need to sort out presentation, and API could maybe be more intuitive

--- a/samples/PivotSharp.Web/Views/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.Web/Views/QueryBuilder/View.cshtml
@@ -12,7 +12,7 @@
 
 		<div class="panel panel-primary">
 			<div class="panel-heading">
-				@Model.PivotTable.Config.Aggregator.ColumnName
+				@Model.PivotTable.Config.Aggregators.ColumnName
 				pivoted by
 				@string.Join(",", Model.PivotTable.Config.Rows)
 				and
