--- a/samples/PivotSharp.Web/Views/Shared/_PivotConfig.cshtml
+++ b/samples/PivotSharp.Web/Views/Shared/_PivotConfig.cshtml
@@ -1,11 +1,17 @@
 ﻿@model PivotSharp.Web.Controllers.PivotConfigViewModel
 
+@if (Model.Config.Filters.Any()) {
+	<p>@string.Join(", ", Model.Config.Filters.Select(f => f.Description))</p>
+}
+else {
+	<p>No filters</p>
+}
 <table class="table table-condensed table-bordered">
 	<thead>
 		@foreach (var col in Model.Config.Cols) {
 			<tr>
 				@if (Model.Config.Cols.IndexOf(col) == 0) {
-					<th rowspan="@Model.Config.Cols.Count">@Model.Config.Aggregators().SqlFunctionName</th>
+					<th rowspan="@Model.Config.Cols.Count"></th>
 				}
 				<th>@col</th>
 			</tr>
@@ -16,7 +22,11 @@
 			<tr>
 				<th>@row</th>
 				@if (Model.Config.Rows.IndexOf(row) == 0) {
-					<td rowspan="@Model.Config.Rows.Count">@Model.Config.Aggregators().ColumnName</td>
+					<td rowspan="@Model.Config.Rows.Count">
+						@foreach (var aggregator in Model.Config.Aggregators) {
+							<span>@aggregator.ToString()</span><br/>
+						}
+					</td>
 				}
 			</tr>
 		}
