--- a/samples/PivotSharp.Web/Views/Shared/_Layout.cshtml
+++ b/samples/PivotSharp.Web/Views/Shared/_Layout.cshtml
@@ -51,6 +51,10 @@
 	@Scripts.Render("~/bundles/jquery")
 	<script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-material-design/0.5.10/js/material.min.js"></script>
+	
+	@* http://qtip2.com/ *@
+	<link  rel="stylesheet" type="text/css" href="http://cdnjs.cloudflare.com/ajax/libs/qtip2/3.0.3/jquery.qtip.min.css"/>
+	<script src="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
 	@RenderSection("scripts", required: false)
 </body>
 </html>
