--- a/samples/PivotSharp.Web/Views/Shared/_Layout.cshtml
+++ b/samples/PivotSharp.Web/Views/Shared/_Layout.cshtml
@@ -19,6 +19,8 @@
 	<link rel="stylesheet" href="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.css">
 	<script src="//cdn.jsdelivr.net/chartist.js/latest/chartist.min.js"></script>
 	<script src="https://cdn.rawgit.com/CodeYellowBV/chartist-plugin-legend/master/chartist-plugin-legend.js"></script>
+	<!-- CDNJS :: Sortable (https://cdnjs.com/) -->
+	<script src="//cdnjs.cloudflare.com/ajax/libs/Sortable/1.4.2/Sortable.min.js"></script>
 </head>
 <body>
 	<div class="container">
