--- a/samples/PivotSharp.Web/Views/QueryBuilder/Add.cshtml
+++ b/samples/PivotSharp.Web/Views/QueryBuilder/Add.cshtml
@@ -184,41 +184,68 @@
 		});
 
 
-		$('.generate').on('click', function () {
+		$('.generate').on('click', function() {
 
-			var config = {
-				rows: $('#rowList .column-name').map(function() { return $(this).html(); }).get(),
-				cols: $('#colList .column-name').map(function () { return $(this).html(); }).get(),
-				filters: $('#filterList .config-item').map(function () {
-					var $this = $(this);
-					return {
-						columnName: $this.find('.column-name').html(),
-						op: $this.find('.operator-select').val(),
-						// typeahead doesn't actually store the value in the underlying field
-						parameterValue: $this.find('.parameter.tt-input').val() || $this.find('.parameter').val()
-					};
-				}).get(),
-				aggregators: $('#aggregatorList .config-item').map(function () {
-					var $this = $(this);
-					return {
-						functionName: $this.find('.aggregator-select').val(),
-						columnName: $this.find('.column-name').html()
-					};
-				}).get()
-			};
+				var config = {
+					rows: $('#rowList .column-name').map(function() { return $(this).html(); }).get(),
+					cols: $('#colList .column-name').map(function() { return $(this).html(); }).get(),
+					filters: $('#filterList .config-item').map(function() {
+						var $this = $(this);
+						return {
+							columnName: $this.find('.column-name').html(),
+							op: $this.find('.operator-select').val(),
+							// typeahead doesn't actually store the value in the underlying field
+							parameterValue: $this.find('.parameter.tt-input').val() || $this.find('.parameter').val()
+						};
+					}).get(),
+					aggregators: $('#aggregatorList .config-item').map(function() {
+						var $this = $(this);
+						return {
+							functionName: $this.find('.aggregator-select').val(),
+							columnName: $this.find('.column-name').html()
+						};
+					}).get()
+				};
 
-			console.log(config);
-			// window.location = 'View/' + $.param({ 'config': JSON.stringify(config) });
+				console.log(config);
+				// window.location = 'View/' + $.param({ 'config': JSON.stringify(config) });
 
-			$.ajax({
-				url: 'Generate/',
-				type: "POST",
-				data: JSON.stringify(config),
-				contentType: "application/json",
-//				complete: callback
-			});
-			//alert(encodeURIComponent(JSON.stringify(config)));
+//			$.ajax({
+//				url: 'Generate/',
+//				type: "POST",
+//				data: JSON.stringify(config),
+//				contentType: "application/json",
+////				complete: callback
+				//			});
+
+			post(
+				'Generate',
+				{ config: JSON.stringify(config) });
 		});
 
 	});
+
+	function post(path, params, method) {
+		method = method || "post"; // Set method to post by default if not specified.
+
+		// The rest of this code assumes you are not using a library.
+		// It can be made less wordy if you use one.
+		var form = document.createElement("form");
+		form.setAttribute("method", method);
+		form.setAttribute("action", path);
+
+		for (var key in params) {
+			if (params.hasOwnProperty(key)) {
+				var hiddenField = document.createElement("input");
+				hiddenField.setAttribute("type", "hidden");
+				hiddenField.setAttribute("name", key);
+				hiddenField.setAttribute("value", params[key]);
+
+				form.appendChild(hiddenField);
+			}
+		}
+
+		document.body.appendChild(form);
+		form.submit();
+	}
 </script>
