Reconnect views to database

--- a/samples/PivotSharp.WebCore/Pages/Data/Index.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Data/Index.cshtml
@@ -5,7 +5,7 @@
 
 
 <div class="row" style="margin-top: 20px;">
-	<partial name="_PivotTable" model="@Model.PivotTable" />
+	<partial name="_PivotTable" model="@Model.PivotTable.PivotTable" />
 </div>
 
 <script type="text/javascript">
