--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/View.cshtml
@@ -3,11 +3,10 @@
 @{
 }
 
-<div class="row" style="margin-top: 20px;">
+@* <div class="row" style="margin-top: 20px;">
 	<partial name="_Chart" model="Model.PivotTableViewModel" />
-
 </div>
-
+ *@
 <div class="row" style="margin-top: 20px;">
 	<div class="col-lg-12 col-md-12 col-sm-12">
 
@@ -20,7 +19,7 @@
 				@string.Join(",", Model.PivotTableViewModel.Config.Cols)
 			</div>
 			<div class="panel-body">
-				<partial name="_PivotTable" model="Model.PivotTableViewModel" />
+				<partial name="_PivotTable" model="Model.PivotTableViewModel.PivotTable" />
 			</div>
 		</div>
 	</div>
