Get Drill Down working

--- a/samples/PivotSharp.WebCore/Pages/QueryBuilder/DrillDown.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/QueryBuilder/DrillDown.cshtml
@@ -1,6 +1,6 @@
 ﻿@page "{id:int}"
 @using System.Data
-@model PivotSharp.WebCore.Pages.Data.DrillDownModel
+@model PivotSharp.WebCore.Pages.QueryBuilder.DrillDownModel
 @{ }
 
 <table class="table">
