Remove redundant section

--- a/samples/PivotSharp.WebCore/Pages/Shared/_Layout.cshtml
+++ b/samples/PivotSharp.WebCore/Pages/Shared/_Layout.cshtml
@@ -52,10 +52,7 @@
                 <div class="navbar-collapse collapse d-sm-inline-flex justify-content-between">
                     <ul class="navbar-nav flex-grow-1">
                         <li class="nav-item">
-                            <a class="nav-link text-dark" href="/Data">Samples</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link text-dark" href="/QueryBuilder">Query Builder</a>
+                            <a class="nav-link text-dark" href="/QueryBuilder">DB Samples</a>
                         </li>
                     </ul>
                 </div>
